tests/snapshots/purity_parity/purity_parity__D__29_main_handles_custom_effect.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/29_main_handles_custom_effect.flx
Category: D
Strict: false
Expect compile error: false

== vm command ==
$ flux --no-cache examples/type_system/29_main_handles_custom_effect.flx
exit_code: 1

== jit command ==
$ flux --no-cache examples/type_system/29_main_handles_custom_effect.flx --jit
exit_code: 1

== vm tuples ==
- E1001 | Not A Function | 

== jit tuples ==
- E1001 | Not A Function | 

== parity ==
match

== mismatch_debug ==
<none>
