tests/snapshots/purity_parity/purity_parity__D__38_top_level_effect_rejected.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/38_top_level_effect_rejected.flx
Category: D
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache examples/type_system/failing/38_top_level_effect_rejected.flx
exit_code: 1

== jit command ==
$ flux --no-cache examples/type_system/failing/38_top_level_effect_rejected.flx --jit
exit_code: 1

== vm tuples ==
- E300 | TYPE UNIFICATION ERROR | expected () -> Unit, found () -> Unit with IO
- E413 | TOP-LEVEL EFFECT | top-level effectful expression
- E414 | MISSING MAIN FUNCTION | effectful top-level execution

== jit tuples ==
- E300 | TYPE UNIFICATION ERROR | expected () -> Unit, found () -> Unit with IO
- E413 | TOP-LEVEL EFFECT | top-level effectful expression
- E414 | MISSING MAIN FUNCTION | effectful top-level execution

== parity ==
match

== mismatch_debug ==
<none>
