tests/snapshots/purity_parity/purity_parity__D__43_main_unhandled_custom_effect.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/43_main_unhandled_custom_effect.flx
Category: D
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache --no-strict examples/type_system/failing/43_main_unhandled_custom_effect.flx
exit_code: 1

== jit command ==
$ flux --no-cache --no-strict examples/type_system/failing/43_main_unhandled_custom_effect.flx --jit
exit_code: 1

== vm tuples ==
- E406 | Unhandled Root Effect | 

== jit tuples ==
- E406 | Unhandled Root Effect | 

== parity ==
match

== mismatch_debug ==
<none>
